Basic HTML Template

--- a/index.html
+++ b/index.html
@@ -12,6 +12,42 @@
     />
   </head>
   <body>
-    <h1>QuizApp</h1>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">QuizApp</a>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="card quizcard" style="width: 18rem">
+        <img src="/img/quiz.png" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Frage</h5>
+
+          <div class="cardOptions">
+            <div class="card mb-2">
+              <div class="card-body">Antwort 1</div>
+            </div>
+
+            <div class="card mb-2">
+              <div class="card-body">Antwort 2</div>
+            </div>
+
+            <div class="card mb-2">
+              <div class="card-body">Antwort 3</div>
+            </div>
+
+            <div class="card mb-2">
+              <div class="card-body">Antwort 4</div>
+            </div>
+          </div>
+
+          <div class="question-footer">
+            <span><b>1</b> von <b>5</b> Fragen</span>
+            <button type="button" class="btn btn-primary">Nächste Frage</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
