--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meine Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/questions_db.js"></script>
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
   </head>
-  <body>
+  <body onload="init()">
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">QuizApp</a>
@@ -22,28 +23,28 @@
       <div class="card quizcard" style="width: 18rem">
         <img src="/img/quiz.png" class="card-img-top" />
         <div class="card-body">
-          <h5 class="card-title">Frage</h5>
+          <h5 class="card-title" id="titleQuestion"></h5>
 
           <div class="cardOptions">
             <div class="card mb-2">
-              <div class="card-body">Antwort 1</div>
+              <div class="card-body" id="answer_1">Antwort 1</div>
             </div>
 
             <div class="card mb-2">
-              <div class="card-body">Antwort 2</div>
+              <div class="card-body" id="answer_2">Antwort 2</div>
             </div>
 
             <div class="card mb-2">
-              <div class="card-body">Antwort 3</div>
+              <div class="card-body" id="answer_3">Antwort 3</div>
             </div>
 
             <div class="card mb-2">
-              <div class="card-body">Antwort 4</div>
+              <div class="card-body" id="answer_4">Antwort 4</div>
             </div>
           </div>
 
           <div class="question-footer">
-            <span><b>1</b> von <b>5</b> Fragen</span>
+            <span><b>1</b> von <b id="totalPagesAmount"></b> Fragen</span>
             <button type="button" class="btn btn-primary">Nächste Frage</button>
           </div>
         </div>
