--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
           <h5 class="card-title" id="titleQuestion"></h5>
 
           <div class="cardOptions">
-            <div class="card mb-2">
-              <div class="card-body" id="answer_1">Antwort 1</div>
+            <div class="card quiz-answer mb-2" onclick="answer('answer_1')">
+              <div class="card-body" id="answer_1"></div>
             </div>
 
-            <div class="card mb-2">
-              <div class="card-body" id="answer_2">Antwort 2</div>
+            <div class="card quiz-answer mb-2" onclick="answer('answer_2')">
+              <div class="card-body" id="answer_2"></div>
             </div>
 
-            <div class="card mb-2">
-              <div class="card-body" id="answer_3">Antwort 3</div>
+            <div class="card quiz-answer mb-2" onclick="answer('answer_3')">
+              <div class="card-body" id="answer_3"></div>
             </div>
 
-            <div class="card mb-2">
-              <div class="card-body" id="answer_4">Antwort 4</div>
+            <div class="card quiz-answer mb-2" onclick="answer('answer_4')">
+              <div class="card-body" id="answer_4"></div>
             </div>
           </div>
 
