--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
           </div>
 
           <div class="question-footer">
-            <span><b id="currentPageNumber">1</b> von <b id="totalPagesAmount"></b> Fragen</span>
+            <span
+              ><b id="currentPageNumber"></b> von
+              <b id="totalPagesAmount"></b> Fragen</span
+            >
             <button
               onclick="nextQuestion()"
               type="button"
