--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meine Quiz App</title>
+    <link rel="icon" type="image/x-icon" href="/img/brain result.png" />
     <link rel="stylesheet" href="styles.css" />
     <script src="./scripts/script.js"></script>
     <script src="./scripts/questions_db.js"></script>
@@ -14,13 +15,11 @@
     />
   </head>
   <body onload="init()">
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">QuizApp</a>
-      </div>
+    <nav class="myNavbar navbarColor">
+        <a class="navbar-brand" href="#"><img src="img/logo.png" class=""></a>
     </nav>
 
-    <div class="container">
+    <div class="container" id="container">
       <div class="card quizcard" style="width: 18rem">
         <img src="/img/quiz.png" class="card-img-top" />
         <div class="card-body">
@@ -28,24 +27,23 @@
 
           <div class="cardOptions">
             <div class="card quiz-answer mb-2" onclick="answer('answer_1')">
-              <div class="card-body" id="answer_1"></div>
+              <div class="card-body answerBackground" id="answer_1"></div>
             </div>
 
             <div class="card quiz-answer mb-2" onclick="answer('answer_2')">
-              <div class="card-body" id="answer_2"></div>
+              <div class="card-body answerBackground" id="answer_2"></div>
             </div>
 
             <div class="card quiz-answer mb-2" onclick="answer('answer_3')">
-              <div class="card-body" id="answer_3"></div>
+              <div class="card-body answerBackground" id="answer_3"></div>
             </div>
 
             <div class="card quiz-answer mb-2" onclick="answer('answer_4')">
-              <div class="card-body" id="answer_4"></div>
+              <div class="card-body answerBackground" id="answer_4"></div>
             </div>
           </div>
 
-          <div class="question-footer" id="question-footer">
-          </div>
+          <div class="question-footer" id="question-footer"></div>
         </div>
       </div>
     </div>
