--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
           </div>
 
           <div class="question-footer" id="question-footer"></div>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              style="width: 11.11%"
+              aria-valuenow="10"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
         </div>
       </div>
     </div>
